# cali_home_damage

./: CA_Wildfire_Home_Damage.ipynb  pyproject.toml  tpot_optimal_pipeline.py
