[tool.poetry]
name = "ca-home-damage"
version = "0.1.0"
description = ""
authors = ["jcla490 <jclark754@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
sklearn = "^0.0"
shap = "^0.39.0"
TPOT = "^0.11.7"
pandas = "^1.2.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
